--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
 
         <!-- https://mvnrepository.com/artifact/javax.faces/jsf-api -->
         <dependency>
-            <groupId>javax.faces</groupId>
+            <groupId>com.sun.faces</groupId>
             <artifactId>jsf-api</artifactId>
-            <version>2.1</version>
+            <version>2.1.29-08</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
